[package]
name = "gz-fuel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-lite = "*"
serde = { version = "1", features = ["derive"] }
serde_json = "*"
dirs = "*"
itertools = "*"
ehttp = { version = "0.4", features = ["native-async"] }
